# favemarks

./: .gitattributes  .gitignore  .ocamlformat  LICENSE  README.md  dune-project  fm.opam
script/: install.sh
src/: dune  main.ml
src/actions/: Add_bookmark.ml  Db_command.ml  Delete_bookmark.ml  Display_info.ml  Export_bookmarks.ml  ListSearch_bookmarks.ml  Open_bookmark.ml  Set_config.ml  Update_bookmark.ml
src/common/: common.ml
src/db/: db.ml  db.mli  model.ml
src/store/: config_store.ml  data_store.ml  state.ml  state.mli
src/ui/: UI_display.ml  UI_menu.ml  UI_prompt.ml
